--- a/app/src/main/res/layout/activity_epic.xml
+++ b/app/src/main/res/layout/activity_epic.xml
@@ -3,6 +3,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.DiscoverTheUniverse.NavigationUI.EpicActivity">
+    tools:context="com.example.discovertheuniverse.NavigationUI.EpicActivity">
 
 </androidx.constraintlayout.widget.ConstraintLayout>
