--- a/app/src/main/res/layout/activity_asteroids_neows.xml
+++ b/app/src/main/res/layout/activity_asteroids_neows.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#000000"
-    tools:context="com.example.discovertheuniverse.NavigationUI.asteroids_neows">
+    tools:context="com.example.discovertheuniverse.NavigationUI.asteroids_neo">
 
     <TextView
         android:id="@+id/neowstitle"
